--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body>
     <div class="cursor"></div>
     <div class="cursor-follower"></div>
-
     <nav class="nav-blur">
         <div class="nav-content">
             <div class="logo">
@@ -29,7 +28,6 @@
             </ul>
         </div>
     </nav>
-
     <section id="home" class="hero-section">
         <div class="hero-bg">
             <div class="hero-shapes"></div>
@@ -44,7 +42,7 @@
                         <span class="typed-text"></span>
                         <span class="cursor-typing"></span>
                     </div>
-                    <p class="hero-description">Bridging the gap between Mechanical Engineering and Artificial Intelligence</p>
+                    <p class="hero-description">I am a passionate Mechanical Engineer with a growing interest in Artificial Intelligence, currently pursuing a Minor in AI at IIT Ropar. With hands-on experience in various engineering disciplines and internships at notable organizations like Ford and GE Aerospace.</p>
                     <div class="cta-buttons">
                         <a href="#projects" class="btn btn-primary">View Projects</a>
                         <a href="#contact" class="btn btn-outline">Contact Me</a>
@@ -67,7 +65,6 @@
             <div class="scroll-text">Scroll to explore</div>
         </div>
     </section>
-
     <section id="about" class="section-padding reveal">
         <div class="container">
             <div class="section-header">
@@ -75,80 +72,90 @@
                 <div class="section-line"></div>
             </div>
             <div class="about-content">
-                <div class="about-image">
-                    <div class="image-frame">
-                        <img src="https://via.placeholder.com/400x500" alt="Srinivas Nampalli">
-                        <div class="frame-border"></div>
+                <div class="about-left">
+                    <div class="about-image">
+                        <div class="image-frame">
+                            <img src="./assets/131 copy.jpg" alt="Srinivas Nampalli">
+                            <div class="frame-border"></div>
+                        </div>
                     </div>
                 </div>
-                <div class="about-text">
-                    <div class="about-cards">
-                        <div class="info-card">
-                            <div class="card-icon"><i class="fas fa-graduation-cap"></i></div>
-                            <div class="card-content">
-                                <h3>Education</h3>
-                                <p>Minor in AI - IIT Ropar</p>
-                            </div>
-                        </div>
-                        <div class="info-card">
-                            <div class="card-icon"><i class="fas fa-briefcase"></i></div>
-                            <div class="card-content">
-                                <h3>Experience</h3>
-                                <p>Ford & GE Aerospace</p>
-                            </div>
+                <div class="about-right">
+                    <div class="about-header">
+                        <h3 class="about-subtitle">Who I Am</h3>
+                        <div class="about-tags">
+                            <span>Mechanical Engineer</span>
+                            <span>AI Researcher</span>
                         </div>
                     </div>
-                    <p class="about-description">I am a passionate Mechanical Engineer with a growing expertise in Artificial Intelligence. My unique blend of mechanical engineering knowledge and AI skills allows me to bridge the gap between traditional engineering and cutting-edge technology.</p>
-                    <div class="achievement-grid">
-                        <div class="achievement">
-                            <span class="number" data-count="5">0</span>
-                            <span class="label">Years Experience</span>
+                    <p class="about-description">
+                        I am a passionate Mechanical Engineer with a growing expertise in Artificial Intelligence, currently pursuing a Minor in AI at IIT Ropar. With hands-on experience at Ford and GE Aerospace, I combine traditional engineering principles with cutting-edge AI technology to create innovative solutions.
+                    </p>
+                    <div class="key-highlights">
+                        <div class="highlight-box">
+                            <i class="fas fa-code-branch"></i>
+                            <h4>Technical Expertise</h4>
+                            <p>Specialized in CAD/CAM, AI/ML, and advanced manufacturing processes</p>
                         </div>
-                        <div class="achievement">
-                            <span class="number" data-count="20">0</span>
-                            <span class="label">Projects Completed</span>
+                        <div class="highlight-box">
+                            <i class="fas fa-lightbulb"></i>
+                            <h4>Innovation Focus</h4>
+                            <p>Developing cutting-edge solutions in propulsion systems and automation</p>
                         </div>
-                        <div class="achievement">
-                            <span class="number" data-count="15">0</span>
-                            <span class="label">Technologies</span>
+                        <div class="highlight-box">
+                            <i class="fas fa-users"></i>
+                            <h4>Leadership</h4>
+                            <p>Founded AstraSrinix, leading tech innovation and content creation</p>
+                        </div>
+                    </div>
+                    <div class="about-stats">
+                        <div class="stat-item">
+                            <span class="stat-number">1+</span>
+                            <span class="stat-label">Years Experience</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">15+</span>
+                            <span class="stat-label">Projects</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">6</span>
+                            <span class="stat-label">Certifications</span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
     <section id="skills" class="section-padding reveal">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Skills & Expertise</h2>
                 <div class="section-line"></div>
             </div>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h3>Artificial Intelligence</h3>
+                    <h3>Technical Skills</h3>
                     <div class="skill-items">
-                        <div class="skill-item" data-skill="Machine Learning">
+                        <div class="skill-item" data-skill="CAD/CAM">
                             <div class="skill-info">
-                                <span class="skill-name">Machine Learning</span>
+                                <span class="skill-name">CAD/CAM (AutoCAD, SolidWorks)</span>
                                 <span class="skill-percentage">95%</span>
                             </div>
                             <div class="skill-progress">
                                 <div class="progress-bar" data-progress="95"></div>
                             </div>
                         </div>
-                        <div class="skill-item" data-skill="Deep Learning">
+                        <div class="skill-item" data-skill="AI/ML">
                             <div class="skill-info">
-                                <span class="skill-name">Deep Learning</span>
+                                <span class="skill-name">AI/ML</span>
                                 <span class="skill-percentage">90%</span>
                             </div>
                             <div class="skill-progress">
                                 <div class="progress-bar" data-progress="90"></div>
                             </div>
                         </div>
-                        <div class="skill-item" data-skill="Computer Vision">
+                        <div class="skill-item" data-skill="Python">
                             <div class="skill-info">
-                                <span class="skill-name">Computer Vision</span>
+                                <span class="skill-name">Python Programming</span>
                                 <span class="skill-percentage">85%</span>
                             </div>
                             <div class="skill-progress">
@@ -160,15 +167,6 @@
                 <div class="skill-category">
                     <h3>Engineering</h3>
                     <div class="skill-items">
-                        <div class="skill-item" data-skill="CAD/CAM">
-                            <div class="skill-info">
-                                <span class="skill-name">CAD/CAM</span>
-                                <span class="skill-percentage">95%</span>
-                            </div>
-                            <div class="skill-progress">
-                                <div class="progress-bar" data-progress="95"></div>
-                            </div>
-                        </div>
                         <div class="skill-item" data-skill="3D Modeling">
                             <div class="skill-info">
                                 <span class="skill-name">3D Modeling</span>
@@ -178,6 +176,15 @@
                                 <div class="progress-bar" data-progress="90"></div>
                             </div>
                         </div>
+                        <div class="skill-item" data-skill="Control Systems">
+                            <div class="skill-info">
+                                <span class="skill-name">Control Systems</span>
+                                <span class="skill-percentage">85%</span>
+                            </div>
+                            <div class="skill-progress">
+                                <div class="progress-bar" data-progress="85"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -185,22 +192,36 @@
                 <h3>Tools & Technologies</h3>
                 <div class="tools-grid">
                     <div class="tool-item" data-tooltip="Python">
-                        <i class="fab fa-python"></i>
+                        <img src="./assets/icons-tools/Python.png" alt="Python" class="tool-icon">
                     </div>
                     <div class="tool-item" data-tooltip="TensorFlow">
-                        <img src="icons/tensorflow.svg" alt="TensorFlow">
+                        <img src="./assets/icons-tools/images.png" alt="TensorFlow" class="tool-icon">
                     </div>
                     <div class="tool-item" data-tooltip="PyTorch">
-                        <img src="icons/pytorch.svg" alt="PyTorch">
+                        <img src="./assets/icons-tools/pytorch.png" alt="PyTorch" class="tool-icon">
                     </div>
                     <div class="tool-item" data-tooltip="SolidWorks">
-                        <img src="icons/solidworks.svg" alt="SolidWorks">
+                        <img src="./assets/icons-tools/solidworks.png" alt="SolidWorks" class="tool-icon">
+                    </div>
+                    <div class="tool-item" data-tooltip="Next.js">
+                        <img src="./assets/tools/nextjs.svg" alt="Next.js" class="tool-icon">
+                    </div>
+                    <div class="tool-item" data-tooltip="Astro">
+                        <img src="./assets/tools/astro.svg" alt="Astro" class="tool-icon">
+                    </div>
+                    <div class="tool-item" data-tooltip="React">
+                        <img src="./assets/tools/react.svg" alt="React" class="tool-icon">
+                    </div>
+                    <div class="tool-item" data-tooltip="Node.js">
+                        <img src="./assets/tools/nodejs.svg" alt="Node.js" class="tool-icon">
+                    </div>
+                    <div class="tool-item" data-tooltip="MATLAB">
+                        <img src="./assets/icons-tools/Matlab_Logo.png" alt="MATLAB" class="tool-icon">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
     <section id="projects" class="section-padding reveal">
         <div class="container">
             <div class="section-header">
@@ -216,21 +237,68 @@
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3>Battery Analysis & PID Control</h3>
-                        <p>Advanced battery capacity analysis and PID controller optimization for Ford's electric vehicle systems.</p>
+                        <h3>Battery Analysis & PID Control System</h3>
+                        <p>Analyzed battery capacity data and optimized PID controllers for Ford's robotics applications</p>
                         <div class="project-tech">
                             <span>Python</span>
-                            <span>Machine Learning</span>
+                            <span>Data Analysis</span>
                             <span>Control Systems</span>
                         </div>
                         <a href="#" class="project-link">View Case Study <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
-                <!-- More project cards... -->
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="project3.jpg" alt="Water Purification System">
+                        <div class="project-overlay">
+                            <div class="project-category">Mechanical Design</div>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Water Purification System</h3>
+                        <p>Developed an innovative water purification system using reverse osmosis and UV radiation</p>
+                        <div class="project-tech">
+                            <span>Mechanical Design</span>
+                            <span>Sustainability</span>
+                            <span>Innovation</span>
+                        </div>
+                        <a href="#" class="project-link">View Case Study <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-
+    <section id="certifications" class="section-padding reveal">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Professional Certifications</h2>
+                <div class="section-line"></div>
+            </div>
+            <div class="certifications-grid">
+                <div class="cert-card">
+                    <div class="cert-icon"><i class="fas fa-robot"></i></div>
+                    <h3>AI and Machine Learning</h3>
+                    <p class="cert-issuer">IIT Ropar</p>
+                    <p class="cert-date">2024</p>
+                    <div class="cert-skills">
+                        <span>Neural Networks</span>
+                        <span>Deep Learning</span>
+                        <span>Computer Vision</span>
+                    </div>
+                </div>
+                <div class="cert-card">
+                    <div class="cert-icon"><i class="fas fa-cogs"></i></div>
+                    <h3>Goethe-Zertifikat A1</h3>
+                    <p class="cert-issuer">Goethe Institute</p>
+                    <p class="cert-date">2023</p>
+                    <div class="cert-skills">
+                        <span>German Language</span>
+                        <span>International Communication</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="contact" class="section-padding reveal">
         <div class="container">
             <div class="section-header">
@@ -272,7 +340,6 @@
             </div>
         </div>
     </section>
-
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
@@ -288,7 +355,6 @@
             </div>
         </div>
     </footer>
-
     <script src="js/cursor.js"></script>
     <script src="js/animations.js"></script>
     <script src="js/noise.js"></script>
